fixed issue with row heights shiftign in product grid

--- a/app/assets/stylesheets/styles/footer.scss
+++ b/app/assets/stylesheets/styles/footer.scss
@@ -1,5 +1,5 @@
 footer{
-  background-image: url('https://the-verve-seeds.s3.us-west-1.amazonaws.com/footer_background.jpg') / 'footer background';
+  background-image: url('https://the-verve-seeds.s3.us-west-1.amazonaws.com/footer_background.jpg');
   height: 400px;
 }
 
