--- a/app/assets/stylesheets/styles/product_index.scss
+++ b/app/assets/stylesheets/styles/product_index.scss
@@ -4,12 +4,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .product-index-content-container{
   margin: 80px 0 80px 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows:  auto;
   gap: 15px;
   width: 95%;
   // grid-auto-rows: minmax(100px, auto);
@@ -22,7 +24,7 @@
 .product-index-item-container{
   box-sizing: border-box;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
 }
